--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="game-container">
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <canvas id="gameCanvas"></canvas>
         <div id="ui">
             <div id="score">Puntos: 0</div>
             <div id="lives">Vidas: 3</div>
